# Fear-the-Crow

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  FearTheCrow.cpp  LICENSE  README.md  template.gdextension
.github/workflows/: build_linux.yml
FearTheCrow/: CMakeLists.txt  Player.cpp  Player.h  extension_registration.cpp  print.cpp  print.h
FearTheCrow/40Legions/WeaponSystem/: Bullethole.h  Weapon.cpp  Weapon.h  WeaponFeature.cpp  WeaponSystem.cpp  WeaponSystem.h
FearTheCrow/40Legions/WeaponSystem/Features/: SingleHitscanFeature.cpp  SingleHitscanFeature.h
FearTheCrow/WeaponSystem/: Bullethole.cpp  Weapon.cpp  Weapon.h  WeaponFeature.cpp  WeaponFeature.h  WeaponSystem.cpp  WeaponSystem.h  WeaponTrigger.cpp  WeaponTrigger.h
FearTheCrow/WeaponSystem/Features/: SingleHitscanFeature.cpp  SingleHitscanFeature.h
FearTheCrow/WeaponSystem/Triggers/: SemiAutoTrigger.cpp  SemiAutoTrigger.h
FearTheCrow/Weapons/: AssaultRifle.cpp  AssaultRifle.h  Revolver.cpp  Revolver.h  SMG.cpp  SMG.h  Shotgun.cpp  Shotgun.h  WeaponBase.cpp  WeaponBase.h
PhantomEngine/: cmake_install.cmake
cmake/: ConfigureFile.cmake  GodotHelpers.cmake  Helpers.cmake
godot_project/: 3Point.gdshader  3Point.tres  ColorPallete.tres  MetersGrid.gdshader  MetersGrid.tres  Player.cs  Project.sln  Retro.gdshader  Retro.tres  Retro2.gdshader  Skybox.gdshader  icon.svg.import  ludpiratepalette128-1x.png.import  pico-8-1x.png.import  player.tscn  project.godot  splash.png.import  splash.png~  test.VoxelGI_data.res  test.tscn  windows-95-256-colours-1x.png.import  wwall1_1.jpg.import
godot_project/Assets/Props/Crate/: Crate.fbx  Crate.fbx.import  crate.png.import
godot_project/Assets/Textures/: Bullethole.png.import  pan-verdanis-cool-lg.jpg.import  pan_dragonheart_lg.jpg.import
godot_project/Assets/Weapons/Pistol/: Pistol.glb  Pistol.glb.import  Pistol_DefaultMaterial_Albedo.png.import  Pistol_DefaultMaterial_Normal.png.import  T_Pistol_Albedo.png.import  T_Pistol_Normal.png.import
godot_project/Assets/Weapons/Shotgun/: Shotgun.glb  Shotgun.glb.import  Shotgun_DefaultMaterial_Albedo.png.import  Shotgun_DefaultMaterial_Normal.png.import  T_Shotgun_Albedo.png.import  T_Shotgun_Normal.png.import
godot_project/Prefabs/: PlayerPositionRef.tscn
godot_project/Prefabs/Weapons/Pistol/: SM_Pistol.tscn
godot_project/Prefabs/Weapons/Shotgun/: SM_Shotgun.tscn
godot_project/Prefabs/World/: Bullethole_Default.tscn  Crate.tscn
resources/Mesh/: Test.gltf  mapMesh.glb  mapMesh.gltf  sm_ramp.gltf  sm_ramp.mtl  test_level.gltf
resources/Shaders/: shader.fs  shader.vs
src/: DemoScene.cpp  DemoScene.h  FearTheCrow.cpp  FearTheCrow.h  game.cpp  game.h  main.c  main.cpp
src/builders/: CMakeLists.txt
src/builders/imgui/: CMakeLists.txt
src/builders/rlimgui/: CMakeLists.txt
src/engine/: PhantomEngine.h  engine.cpp  engine.h  engine_core.cpp  engine_core.h
src/engine/Core/: Game.cpp  PE_Core.h
src/engine/classes/: Artifact.cpp  Artifact.h  Collision.h  GameObject.cpp  GameObject.h  Husk.cpp  Husk.h  Player.cpp  Player.h  husk.cpp  husk.h
src/engine/main/: Game.h  PE_Core.cpp
src/game/: FearTheCrow.cpp  FearTheCrow.h
src/include/: imguiThemes.h
